5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1635_869.log
== TEST (2019-04-14 13:05:46) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(5 * "valor" // 100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = float(5 * "valor" // 100)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:06:22) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(5 * "val" // 100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = float(5 * "val" // 100)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:09:35) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    desconto = float(5 * "val" // 100)
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:10:00) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
print (desconto)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:13:11) 
-- CODE:
val = float(input("digite o valor "))
if val >= 200.00:
	mensagem = (desconto = float(val * 5 //100))
else:
	mensagem = val
print (mensagem)
-- ERROR:
File "XXXX", line 3
    mensagem = (desconto = float(val * 5 //100))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:18:20) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (mensagem)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:18:32) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (mensagem)
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:18:50) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (mensagem)
-- EXECUTION TIME:
0.248204
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:20:07) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (round(mensagem,2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:20:42) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (round(mensagem,3))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:20:56) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (round(mensagem,3))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:21:12) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (round(mensagem,3))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:21:31) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (round(mensagem,2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:21:45) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)
if val >= 200.00:
	mensagem = (desconto)
else:
	mensagem = (val)
print (round(mensagem,2))
-- EXECUTION TIME:
0.146903
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:24:59) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val >= 200.00:
	mensagem = (val2)
else:
	mensagem = (val)
print (round(mensagem,2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:25:09) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val >= 200.00:
	mensagem = (val2)
else:
	mensagem = (val)
print (round(mensagem,2))
-- EXECUTION TIME:
0.142493
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:25:20) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val >= 200.00:
	mensagem = (val2)
else:
	mensagem = (val)
print (round(mensagem,2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:27:35) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val >= 200.00:
	mensagem = (val - val2)
else:
	mensagem = (val)
print (round(mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:27:58) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val >= 200.00:
	mensagem = (val - val2)
else:
	mensagem = (val)
print (round(mensagem,2))
-- EXECUTION TIME:
0.176049
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:40:26) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val < 200.00:
	mensagem = val
else:
	mensagem = val
	
print (round(mensagem,2))
-- OUTPUT:
200.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:40:57) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val < 200.00:
	mensagem = val
else:
	mensagem = val2
	
print (round(mensagem,2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:41:19) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val < 200.00:
	mensagem = val
else:
	mensagem = val - val2
	
print (round(mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 13:41:29) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val < 200.00:
	mensagem = val
else:
	mensagem = val - val2
	
print (round(mensagem,2))
-- EXECUTION TIME:
0.128876
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:49:30) 
-- CODE:
val = float(input("digite o valor "))
val2 = float(val * 5 //100)
if val >= 200.00:
	mensagem = val - val2
else:
	mensagem = val
	
print (round(mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:50:39) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	val2 = float(val * 5 //100)
	mensagem = val - val2
else:
	mensagem = val
	
print (round(mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:58:42) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	val2 = float(val * 5 //100)
	mensagem = val - val2
else:
	mensagem = val
	
print (round(mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 13:59:54) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	val2 = float(val * 5 //100)
	mensagem = val - val2
else:
	mensagem = val
	
print (float(mensagem))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 14:00:07) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	val2 = float(val * 5 //100)
	mensagem = val - val2
else:
	mensagem = val
	
print (float(mensagem))
-- EXECUTION TIME:
0.15628
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:00:53) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	desconto = float(val * 5 //100)
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:10:51) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	desconto = float(val * 5 //100)
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:10:55) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	desconto = float(val * 5 //100)
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:29:09) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if val >= 200.00:
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:29:09) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if val >= 200.00:
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:29:09) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if val >= 200.00:
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:29:09) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if val >= 200.00:
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:29:13) 
-- CODE:
val = float(input("digite o valor "))

if val >= 200.00:
	desconto = float(val * 5 //100)
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:29:39) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if val >= 200.00:
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 14:29:50) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if val >= 200.00:
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- EXECUTION TIME:
0.238321
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:35:07) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if (val >= 200.00):
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 14:35:21) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if (val >= 200.00):
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- EXECUTION TIME:
0.181966
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 14:35:24) 
-- CODE:
val = float(input("digite o valor "))
desconto = float(val * 5 //100)

if (val >= 200.00):
	mensagem = val - desconto
else:
	mensagem = val
	
print (round(mensagem, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
